helm/harbor-install/httproute/httproute-harbor-ktcloud-com-443.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-harbor-ktcloud-com-443
  namespace: cicd-tools
  labels:
    app: harbor
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: harbor
    app.kubernetes.io/part-of: harbor
    app.kubernetes.io/version: "2.11.0"
spec:
  hostnames:
  - harbor-md-dev.ktcloud.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-admindev
    namespace: nginx-gateway
    sectionName: https-ktcloud-com
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: harbor-core 
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /api/
    - path:
        type: PathPrefix
        value: /service/
    - path:
        type: PathPrefix
        value: /v2/
    - path:
        type: PathPrefix
        value: /chartrepo/
    - path:
        type: PathPrefix
        value: /c/
    # harbor-portal 서비스로 라우팅되는 경로
  - backendRefs:
    - group: ""
      kind: Service
      name: harbor-portal
      port: 80
    matches:
      - path:
          type: PathPrefix
          value: /
